tests/ui/target_modifiers/sanitizer-kcfi-normalize-ints.wrong_sanitizer.stderr
error: mixing `-Csanitize` will cause an ABI mismatch in crate `sanitizer_kcfi_normalize_ints`
  --> $DIR/sanitizer-kcfi-normalize-ints.rs:12:1
   |
LL | #![feature(no_core)]
   | ^
   |
   = help: the `-Csanitize` flag modifies the ABI so Rust crates compiled with different values of this flag cannot be used together safely
   = note: unset `-Csanitize` in this crate is incompatible with `-Csanitize=kcfi` in dependency `kcfi_normalize_ints`
   = help: set `-Csanitize=kcfi` in this crate or unset `-Csanitize` in `kcfi_normalize_ints`
   = help: if you are sure this will not cause problems, you may use `-Cunsafe-allow-abi-mismatch=sanitize` to silence this error

error: aborting due to 1 previous error

